# pyright-pybind11

./: .gitignore  CMakeLists.txt  LICENSE  README.md  calculator.cpp  demo.sh  environment.yml  pyproject.toml
.devcontainer/: devcontainer.json
example/: environment.yml  main.py
examples/: environment.yml
